--- a/Lab 1/Z4/Lab1_Z4.ipynb
+++ b/Lab 1/Z4/Lab1_Z4.ipynb
@@ -226,7 +226,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Zastosowanie różnych PCA o rónych jądrach do stworzenia eigenfaces.**"
+        "**Porównanie ze wcześniej użytym jądrem liniowym.**"
       ],
       "metadata": {
         "id": "Zsk8d_Jw3zbw"
